[package]
name = "m3u-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = "0.8.8"
bytes = "1.11.0"
config = "0.15.19"
dashmap = "6.1.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
m3u_parser = "0.1.3"
reqwest = { version = "0.12.28", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"

